--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,87 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+/*
+  1st: 14.77 51.18% 49.8%
+  2nd: 14.72 51.46% 79.8%
+  3rd: 10.91 52.38% 95.88%
+  4th: 338.18 52.38% 95.88%
+  5th: 335.09 51.46% 79.8%
+  6th: 334.62 51.18% 49.8%
+*/
+
+/* Custom pink */
+
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+    --primary: 14.72 51.46% 79.8%;
+    --primary-foreground: 210 40% 98%;
+    --secondary: 335.09 51.46% 79.8%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+    --muted: 14.72 51.46% 79.8%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+    --accent: 335.09 51.46% 79.8%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+    --border: 334.62 51.18% 49.8%;
+    --input: 14.77 51.18% 49.8%;
+    --ring: 221.2 83.2% 53.3%;
+    --radius: 1rem;
+
+    --first: 14.77 51.18% 49.8%;
+    --second: 14.72 51.46% 79.8%;
+    --third: 10.91 52.38% 95.88%;
+    --fourth: 338.18 52.38% 95.88%;
+    --fifth: 335.09 51.46% 79.8%;
+    --sixth: 334.62 51.18% 49.8%;
+  }
 }
 
-@media (prefers-color-scheme: dark) {
+/* Shadcn pink */
+
+/* @layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 0 0% 100%;
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 346.8 77.2% 49.8%;
+    --primary-foreground: 355.7 100% 97.3%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 346.8 77.2% 49.8%;
+    --radius: 1rem;
+  }
+} */
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  background-image: url("../assets/images/background.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
