--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,3 +100,11 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+body {
+  background: linear-gradient(rgba(0, 0, 0, 0) 0%, rgba(93, 118, 152, 1) 93%),
+    url("../assets/images/hero-background.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: rgb(93, 118, 152);
+}
