--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,7 +105,7 @@ body {
   background-size: cover;
 }
 
-.hero-container {
+/* .hero-container {
   background: linear-gradient(
       rgba(93, 118, 152, 0.2) 0%,
       rgba(93, 118, 152, 1) 100%
@@ -114,4 +114,4 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-color: rgb(93, 118, 152);
-}
+} */
